...
    </string>

    <string name="activity_chat_msg_me">
        Me
    </string>

    <string name="activity_chat_err_sending_msg_api_access_problem">
        Problem with sending message. Check your internet connection.
    </string>

    <string name="activity_chat_err_sending_msg_invalid_token">
        Problem with sending message. Your session is expired. Log in to account once again.
    </string>

    <string name="activity_chat_err_fetching_msg_api_access_problem">
        Problem with fetching messages. Check your internet connection.
    </string>

    <string name="activity_chat_err_fetching_msg_invalid_token">
        Problem with fetching messages. Your session is expired. Log in to account once again.
    </string>

    <string name="activity_alert_info_user_name_example_text">
        Bob
    </string>
...
    <string name="activity_user_err_fetching_api_access_error">
        Problem with fetching users data. Check your connection.
    </string>
    <string name="activity_user_err_fetching_invalid_token">
        Problem with fetching users data. Your session is expired. Log in once again.
    </string>
    <string name="yes">
        Yes
    </string>
    <string name="no">
        No
    </string>
    <string name="activity_settings_user_desc">
...
    <string name="activity_settings_delete_account">
        Delete account
    </string>
    <string name="activity_settings_msg_delete_account_are_you_sure">
        Are you sure to delete account?
    </string>
    <string name="activity_settings_msg_delete_account_success">
        Account is deleted.
    </string>
    <string name="activity_settings_err_delete_account_api_access_problem">
        Problem with deleting account. Check your connection.
    </string>
    <string name="activity_settings_err_delete_account_invalid_token">
        Problem with deleting account. Your session is expired. Log in once again.
    </string>
    <string name="activity_settings_err_stop_sharing_location_api_access_problem">
        Problem with your location on server. Check your connection.
    </string>
    <string name="activity_settings_err_stop_sharing_location_invalid_token">
        Problem with removing your location on server. Your session is expired. Log in once again.
    </string>
    <string name="activity_splash_screen_logo_desc">
        Lost finder logo
    </string>
</resources>
