<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_chat_rv_message_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/very_light_gray"
        android:padding="4dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/activity_chat_lt_message_box"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/activity_chat_lt_message_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="32dp"
        android:background="@drawable/ic_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/activity_chat_et_message"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="center"
            android:hint="@string/activity_chat_enter_message"
            android:background="@android:color/transparent"
            android:maxLines="6"
            android:autofillHints="@string/activity_chat_enter_message"
            android:inputType="textShortMessage|textMultiLine" />

        <Button
            android:id="@+id/activity_chat_bt_send"
            android:text="@string/activity_chat_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:enabled="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>