<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/ic_border">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/activity_settings_user_desc"
            android:src="@drawable/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/activity_settings_username" />

            <TextView
                android:id="@+id/activity_settings_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_username_example"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/activity_settings_email" />

            <TextView
                android:id="@+id/activity_settings_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_email_example"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ic_border">

        <TextView
            android:id="@+id/activity_settings_tv_sharing_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/activity_settings_sharing_location"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/activity_settings_sw_sharing_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ic_border">

        <TextView
            android:id="@+id/activity_settings_tv_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/activity_settings_change_password"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/activity_settings_bt_change_password"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/ic_circular_button"
            android:contentDescription="@drawable/ic_circular_button"
            android:enabled="false"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/ic_border">

        <TextView
            android:id="@+id/activity_settings_tv_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/activity_settings_delete_account"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/activity_settings_bt_delete_account"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/ic_red_circular_button"
            android:contentDescription="@string/activity_settings_delete_account"
            android:enabled="false"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_delete" />

    </LinearLayout>

</LinearLayout>